Fixed spacing around header.

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,11 +1,11 @@
 header {
 	display: flex;
 	justify-content: space-between;
+	max-width: calc(100% - 2.5rem);
 	padding: 1.25rem;
-	padding-right: constant(safe-area-inset-right);
 	padding-right: env(safe-area-inset-right);
-	padding-left: constant(safe-area-inset-left);
 	padding-left: env(safe-area-inset-left);
+	margin: 0 auto;
 	
 	a {
 		display: block;
